--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "top-user-agents": "1.0.26"
   },
   "resolutions": {
+    "tsdx/**/node-notifier": "10.0.0",
     "eslint": "7.27.0"
   },
   "jest": {
