--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
       "eslint-plugin-jest": "27.2.3",
       "eslint-plugin-react-hooks": "4.6.0",
       "node-notifier": "10.0.1",
+      "normalize-package-data@2.5.0>semver": "5.7.2",
       "jest": "29.5.0",
       "rollup-plugin-typescript2": "^0.32.0",
       "ts-jest": "29.1.0",
